--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 node_modules
-.env
+development.env
 package-lock.json
+
+# VS Code
+.vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+ormconfig.json
+ validator-demo/out
