--- a/employee-crud/package.json
+++ b/employee-crud/package.json
@@ -10,6 +10,7 @@
    "dependencies": {
       "dotenv": "^8.2.0",
       "express": "^4.17.1",
+      "lodash": "^4.17.20",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
       "typeorm": "^0.2.31"
