--- a/employee-crud/src/development.env
+++ b/employee-crud/src/development.env
@@ -4,3 +4,11 @@ DB_USER=root
 DB_PASS=root
 DB_HOST=localhost
 DB_PORT=3306
+
+#server
+SERVICE_CODE=1005
+
+# Rabbit MQ Queues
+RABBITQUEUE_URL=amqp://localhost
+RABBITQUEUE_USER_NAME=guest
+RABBITQUEUE_USER_PASS=guest
